Colwit experience removed

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         }
 
         .cv-viewer footer.vcv-footer {
-            margin-top: 100px;
+            margin-top: 75px;
             color: #333;
             text-align: center;
         }
@@ -1393,7 +1393,7 @@
                                 <div class="article-headings">
                                     <h6 class="date-range">
                                         <span data-bind="start_date">
-                                            <span class="undefined needsclick" contenteditable="false" data-placeholder="YYYY">2019</span>
+                                            <span class="undefined needsclick" contenteditable="false" data-placeholder="YYYY">2020</span>
                                         </span>
                                         <span data-bind="end_date">
                                             <span class="undefined needsclick" contenteditable="false" data-placeholder="YYYY">2020</span>
@@ -1533,96 +1533,58 @@
                                     </div>
                                 </div>
                             </article>
-                            <!-- COLWIT -->
-                            <article data-bind="contents" class="">
-                                <div class="article-headings">
-                                    <h6 class="date-range"><span data-bind="start_date"><span
-                                                class="undefined needsclick" contenteditable="false"
-                                                data-placeholder="YYYY">2016</span></span><span
-                                            data-bind="end_date"><span class="undefined needsclick"
-                                                contenteditable="false" data-placeholder="YYYY">2016</span></span></h6>
-                                </div>
-                                <div class="article-body">
-                                    <h4 data-bind="title"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Job title">CTO</span></h4><a data-bind="organization_url"
-                                        target="_blank" rel="nofollow" href="http://www.colwit.com/">
-                                        <h5 data-bind="organization"><span class="undefined needsclick"
-                                                contenteditable="false" data-placeholder="Organization">ColWit</span>
-                                        </h5>
-                                    </a>
-                                    <div id="react-tinymce-192" class="mce-content-body" spellcheck="true"
-                                        placeholder="Description">
-                                        <p><span>I worked in</span></p>
-                                        <ul>
-                                            <li><span>Requirement analysis</span></li>
-                                            <li><span>Scrum Master</span></li>
-                                            <li><span>Design y develop web apps php (Symfony)</span></li>
-                                            <li><span>iOS App development</span></li>
-                                            <li><span>Front Development</span></li>
-                                            <li>Unit testing</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </article>
+                            
                             <!-- ITO Software -->
                             <article data-bind="contents" class="">
                                 <div class="article-headings">
-                                    <h6 class="date-range"><span data-bind="start_date"><span
-                                                class="undefined needsclick" contenteditable="false"
-                                                data-placeholder="YYYY">2015</span></span><span
-                                            data-bind="end_date"><span class="undefined needsclick"
-                                                contenteditable="false" data-placeholder="YYYY">2016</span></span></h6>
+                                    <h6 class="date-range">
+                                        <span data-bind="start_date"><span class="undefined needsclick" contenteditable="false" data-placeholder="YYYY">2015</span>
+                                            </span>
+                                            <span data-bind="end_date"><span class="undefined needsclick" contenteditable="false" data-placeholder="YYYY">2016</span>
+                                        </span>
+                                    </h6>
                                 </div>
                                 <div class="article-body">
-                                    <h4 data-bind="title"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Job title">Web Developer</span></h4><a
-                                        data-bind="organization_url" target="_blank" rel="nofollow"
-                                        href="http://www.ito-software.com/">
-                                        <h5 data-bind="organization"><span class="undefined needsclick"
-                                                contenteditable="false" data-placeholder="Organization">ITO
-                                                Software</span></h5>
+                                    <h4 data-bind="title"><span class="undefined needsclick" contenteditable="false" data-placeholder="Job title">iOS Developer</span></h4>
+                                    <a data-bind="organization_url" target="_blank" rel="nofollow" href="http://www.ito-software.com/">
+                                        <h5 data-bind="organization"><span class="undefined needsclick" contenteditable="false" data-placeholder="Organization">ITO Software</span></h5>
                                     </a>
                                     <div id="react-tinymce-194" class="mce-content-body" spellcheck="true"
                                         placeholder="Description">
                                         <p>I worked in:</p>
                                         <ul>
-                                            <li><span>Create web sites in</span>&nbsp;Drupal CMS</li>
+                                            <li>Build iOS Apps MVP</li>
                                             <li><span>support of developments</span>.</li>
-                                            <li><span>Build web apps for companies</span>&nbsp;<span>in private sector
-                                                    and public</span>.</li>
-                                            <li>Build iOS Apps</li>
+                                            <li><span>Build web apps in Symfony for companies</span>&nbsp;<span>in private sector and public</span>.</li>
                                             <li><span>Scrum methodology</span>.</li>
                                         </ul>
                                     </div>
                                 </div>
                             </article>
+
                             <!-- INVENTIBA CREATIONS -->
                             <article data-bind="contents" class="">
                                 <div class="article-headings">
-                                    <h6 class="date-range"><span data-bind="start_date"><span
-                                                class="undefined needsclick" contenteditable="false"
-                                                data-placeholder="YYYY">2013</span></span><span
-                                            data-bind="end_date"><span class="undefined needsclick"
-                                                contenteditable="false" data-placeholder="YYYY">2015</span></span></h6>
+                                    <h6 class="date-range">
+                                        <span data-bind="start_date">
+                                            <span class="undefined needsclick" contenteditable="false" data-placeholder="YYYY">2013</span>
+                                        </span>
+                                        <span data-bind="end_date">
+                                            <span class="undefined needsclick" contenteditable="false" data-placeholder="YYYY">2015</span>
+                                        </span>
+                                    </h6>
                                 </div>
                                 <div class="article-body">
-                                    <h4 data-bind="title"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Job title">FullStack Web Developer</span></h4><a
-                                        data-bind="organization_url" target="_blank" rel="nofollow"
-                                        href="http://www.inventiba.com/">
-                                        <h5 data-bind="organization"><span class="undefined needsclick"
-                                                contenteditable="false" data-placeholder="Organization">Inventiba
-                                                Creations</span></h5>
+                                    <h4 data-bind="title"><span class="undefined needsclick" contenteditable="false" data-placeholder="Job title">FullStack Web Developer</span></h4>
+                                    <a data-bind="organization_url" target="_blank" rel="nofollow" href="http://www.inventiba.com/">
+                                        <h5 data-bind="organization"><span class="undefined needsclick" contenteditable="false" data-placeholder="Organization">Inventiba Creations</span></h5>
                                     </a>
                                     <div id="react-tinymce-196" class="mce-content-body" spellcheck="true"
                                         placeholder="Description">
                                         <p><span>I worked in:</span></p>
                                         <ul>
-                                            <li><span><span>B</span>uild web apps in&nbsp;</span>&nbsp;Zend Framework.
-                                            </li>
-                                            <li><span>Create websites in Drupal CMS</span></li>
-                                            <li><span>Frontend JavaScript &amp; Css</span></li>
-                                            <li><span><span>Test code</span></span></li>
+                                            <li><span>Frontend JavaScript &amp; Css, first mobile</span></li>
+                                            <li>Web Apps in PHP Zend framework</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -1700,20 +1662,18 @@
                             </article>
 
                         </section>
-                        <div data-bind="add-section-btn">
-                            <span class="undefined needsclick" contenteditable="false"
-                                data-placeholder="add-section-btn"></span>
-                        </div>
+                        <!-- <div data-bind="add-section-btn">
+                            <span class="undefined needsclick" contenteditable="false" data-placeholder="add-section-btn"></span>
+                        </div> -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer class="vcv-footer">2019</footer>
+    <footer class="vcv-footer">2020</footer>
 
-    <link rel="stylesheet" type="text/css"
-        href="./Jirson Tavera - Software Engineering Professional - VisualCV_files/magnific-popup.min.css">
+    <link rel="stylesheet" type="text/css" href="./Jirson Tavera - Software Engineering Professional - VisualCV_files/magnific-popup.min.css">
     <script src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/jquery.min.js"></script>
     <script type="text/javascript"
         id="">!function (b, e, f, g, a, c, d) { b.fbq || (a = b.fbq = function () { a.callMethod ? a.callMethod.apply(a, arguments) : a.queue.push(arguments) }, b._fbq || (b._fbq = a), a.push = a, a.loaded = !0, a.version = "2.0", a.queue = [], c = e.createElement(f), c.async = !0, c.src = g, d = e.getElementsByTagName(f)[0], d.parentNode.insertBefore(c, d)) }(window, document, "script", "//connect.facebook.net/en_US/fbevents.js"); fbq("init", "130994437258304"); fbq("track", "PageView");</script>
