--- a/es.html
+++ b/es.html
@@ -1099,7 +1099,7 @@
                             <article class="competency " data-bind="contents">
                                 <div class="article-headings">
                                     <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Name">Project Requirements and planning</span></h6>
+                                            data-placeholder="Name">Analisis de requerimientos y planeación de proyecto</span></h6>
                                 </div>
                                 <div class="article-body competency">
                                     <ul class="competency-list">
@@ -1121,8 +1121,7 @@
                             </article>
                             <article class="competency " data-bind="contents">
                                 <div class="article-headings">
-                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Name">Scrum</span></h6>
+                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false" data-placeholder="Name">Scrum</span></h6>
                                 </div>
                                 <div class="article-body competency">
                                     <ul class="competency-list">
@@ -1160,15 +1159,34 @@
                                         <li class="filled"></li>
                                         <li class=""></li>
                                     </ul>
-                                    <div id="react-tinymce-53776" class=" mce-content-body" spellcheck="true"
-                                        placeholder="Description"></div>
+                                    <div id="react-tinymce-53776" class=" mce-content-body" spellcheck="true" placeholder="Description"></div>
                                 </div>
                                 <div class="clearfix"></div>
                             </article>
                             <article class="competency " data-bind="contents">
                                 <div class="article-headings">
-                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Name">Git</span></h6>
+                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false" data-placeholder="Name">Git</span></h6>
+                                </div>
+                                <div class="article-body competency">
+                                    <ul class="competency-list">
+                                        <li class="filled"></li>
+                                        <li class="filled"></li>
+                                        <li class="filled"></li>
+                                        <li class="filled"></li>
+                                        <li class="filled"></li>
+                                        <li class="filled"></li>
+                                        <li class="filled"></li>
+                                        <li class="filled"></li>
+                                        <li class="filled"></li>
+                                        <li class=""></li>
+                                    </ul>
+                                    <div id="react-tinymce-53778" class=" mce-content-body" spellcheck="true" placeholder="Description"></div>
+                                </div>
+                                <div class="clearfix"></div>
+                            </article>
+                            <article class="competency " data-bind="contents">
+                                <div class="article-headings">
+                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false" data-placeholder="Name">OOP</span></h6>
                                 </div>
                                 <div class="article-body competency">
                                     <ul class="competency-list">
@@ -1190,8 +1208,7 @@
                             </article>
                             <article class="competency " data-bind="contents">
                                 <div class="article-headings">
-                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Name">OOP</span></h6>
+                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false" data-placeholder="Name">Linux</span></h6>
                                 </div>
                                 <div class="article-body competency">
                                     <ul class="competency-list">
@@ -1206,15 +1223,13 @@
                                         <li class="filled"></li>
                                         <li class=""></li>
                                     </ul>
-                                    <div id="react-tinymce-53778" class=" mce-content-body" spellcheck="true"
-                                        placeholder="Description"></div>
+                                    <div id="react-tinymce-53780" class=" mce-content-body" spellcheck="true" placeholder="Description"></div>
                                 </div>
                                 <div class="clearfix"></div>
                             </article>
                             <article class="competency " data-bind="contents">
                                 <div class="article-headings">
-                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Name">Linux</span></h6>
+                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false" data-placeholder="Name">Liderazgo</span></h6>
                                 </div>
                                 <div class="article-body competency">
                                     <ul class="competency-list">
@@ -1229,15 +1244,13 @@
                                         <li class="filled"></li>
                                         <li class=""></li>
                                     </ul>
-                                    <div id="react-tinymce-53780" class=" mce-content-body" spellcheck="true"
-                                        placeholder="Description"></div>
+                                    <div id="react-tinymce-53776" class=" mce-content-body" spellcheck="true" placeholder="Description"></div>
                                 </div>
                                 <div class="clearfix"></div>
                             </article>
                             <article class="competency " data-bind="contents">
                                 <div class="article-headings">
-                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Name">Leadership</span></h6>
+                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false" data-placeholder="Name">Trabajo en equipo</span></h6>
                                 </div>
                                 <div class="article-body competency">
                                     <ul class="competency-list">
@@ -1252,15 +1265,13 @@
                                         <li class="filled"></li>
                                         <li class=""></li>
                                     </ul>
-                                    <div id="react-tinymce-53776" class=" mce-content-body" spellcheck="true"
-                                        placeholder="Description"></div>
+                                    <div id="react-tinymce-53776" class=" mce-content-body" spellcheck="true" placeholder="Description"></div>
                                 </div>
                                 <div class="clearfix"></div>
                             </article>
                             <article class="competency " data-bind="contents">
                                 <div class="article-headings">
-                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Name">TeamWork</span></h6>
+                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false" data-placeholder="Name">Comunicación interpersonal</span></h6>
                                 </div>
                                 <div class="article-body competency">
                                     <ul class="competency-list">
@@ -1275,74 +1286,49 @@
                                         <li class="filled"></li>
                                         <li class=""></li>
                                     </ul>
-                                    <div id="react-tinymce-53776" class=" mce-content-body" spellcheck="true"
-                                        placeholder="Description"></div>
-                                </div>
-                                <div class="clearfix"></div>
-                            </article>
-                            <article class="competency " data-bind="contents">
-                                <div class="article-headings">
-                                    <h6 data-bind="name"><span class="undefined needsclick" contenteditable="false"
-                                            data-placeholder="Name">Good Communication</span></h6>
-                                </div>
-                                <div class="article-body competency">
-                                    <ul class="competency-list">
-                                        <li class="filled"></li>
-                                        <li class="filled"></li>
-                                        <li class="filled"></li>
-                                        <li class="filled"></li>
-                                        <li class="filled"></li>
-                                        <li class="filled"></li>
-                                        <li class="filled"></li>
-                                        <li class="filled"></li>
-                                        <li class="filled"></li>
-                                        <li class=""></li>
-                                    </ul>
-                                    <div id="react-tinymce-53776" class=" mce-content-body" spellcheck="true"
-                                        placeholder="Description"></div>
+                                    <div id="react-tinymce-53776" class=" mce-content-body" spellcheck="true" placeholder="Description"></div>
                                 </div>
                                 <div class="clearfix"></div>
                             </article>
                         </section>
                         <div data-bind="add-sidebar-section-btn">
-                            <span class="undefined needsclick" contenteditable="false"
-                                data-placeholder="add-sidebar-section-btn"></span></div>
+                            <span class="undefined needsclick" contenteditable="false" data-placeholder="add-sidebar-section-btn"></span></div>
                     </div>
                     <div class="main">
                         <section data-bind="sections" id="summary" class="text_story no-page-break">
                             <header>
-                                <h3 class="header-text" data-bind="label"><span class="undefined needsclick"
-                                        contenteditable="false" data-placeholder="Summary">Summary</span></h3>
+                                <h3 class="header-text" data-bind="label">
+                                    <span class="undefined needsclick" contenteditable="false" data-placeholder="Summary">Resumen</span>
+                                </h3>
                             </header>
                             <article data-bind="content" class="">
-                                <div id="react-tinymce-53784" class=" mce-content-body" spellcheck="true"
-                                    placeholder="Description">
+                                <div id="react-tinymce-53784" class=" mce-content-body" spellcheck="true" placeholder="Description">
                                     <p style="text-align: justify;">
-                                        I'm a passionate Software developer, interested for new technologies.
-                                        I have more than 6 years of experience developing native iOS Apps and also
-                                        working a little with web development, i worked in several teams international and national learning the best of each of them.
+                                        Soy un desarrollador de software apasionado simpre apasionado por las nuevas tecnologias y querer mejorar mis skills día a día
+                                        Tengo más de 5 años de experiencia en desarrollo nativo para iOS y cuento también con algunos skills en desarrollo web apps
+                                        He trabajado para muchas compañias nacionales e internacionales en la cual he desarrollado muchas aplicaciones y he aprendido muchos no solo en lo técnico sino también en lo personal que me han ayudado a crecer profesionalmente
                                     </p>
 
                                     <p style="text-align: justify;" data-mce-style="text-align: justify;">
                                         <span><span><strong>iOS Development Skills:</strong></span></span></p>
                                     <p style="text-align: justify;" data-mce-style="text-align: justify;">
                                         <span><span><span>
-                                                - Strong Knowledge in Swift programming language<br>
+                                                - Fuerte conocimiento en Swift<br>
                                                 - iOS architecture (MVVM, VIPER, MVP) and lover of Clean Arquitecture ♥<br>
-                                                - Patterns Designs<br>
-                                                - protocol oriented programming & SOLID principles follower<br>
-                                                - Consuming Web services (REST)<br>
-                                                - Interpretation and handled of Json structures<br>
-                                                - Upload to AppStore<br>
+                                                - Patrones de diseño de software<br>
+                                                - Programación orientada a protocolos y seguidor de los principios SOLID<br>
+                                                - Experiencia en consumo de servicios<br>
+                                                - Interpretación y manejo de estructuras JSON<br>
+                                                - Experiencia subiendo a la App Store<br>
                                                 - Testflight, Fabric, AppCenter<br>
                                                 - Unit testing & TDD<br>
                                                 - IDE: Xcode<br>
-                                                - Configuration management<br>
-                                                - Analysis of Code Quality in Sonar<br>
+                                                - Configuración de entornos<br>
+                                                - Analisis de calidad de código SONAR<br>
                                                 - Core frameworks (core data, core animation, core location, map kit, etc)<br>
                                                 - Push Notifications (OneSignal)<br>
                                                 - DeepLinks<br>
-                                                - Experience with Firebase (Firestore, real-time database, Crashlytics, Remote Config, A/B Test, Analytics - Debug View for Tracking)
+                                                - Experiencia con Firebase (Firestore, real-time database, Crashlytics, Remote Config, A/B Test, Analytics - Debug View for Tracking)
                                                 - Realm<br>
                                                 - RxSwift<br>
                                                 - User Preferences and Keychain<br>
@@ -1357,24 +1343,26 @@
                                         <strong><span><span>General Skills</span></span></strong></p>
                                     <p style="text-align: justify;" data-mce-style="text-align: justify;">
                                         <span><span><span>
-                                            - Object-oriented programming<br>
-                                            - Experience working with version control system GIT<br>
-                                            - Agile methodologies (Scrum, JIRA)<br>
-                                            - Problem-solving skills<br>
-                                            - Business Analysis<br>
-                                            - Project Planning<br>
+                                            - Programación orientada a objetos<br>
+                                            - Experiencia con manejo de control de versiones GIT<br>
+                                            - Metodologias ágiles (Scrum, JIRA)<br>
+                                            - Facilidad para solucionar problemas<br>
+                                            - Analisis de requerimientos del negocio<br>
+                                            - Planeación de tareas<br>
                                             - Teamwork skills<br>- Leadership skills<br>
-                                            - Intermediate Written and spoken english<br>
-                                            - Good communication skills<br>
-                                                </span></span></span></p>
+                                            - Habilidad intermedia para escribir y hablar inglés<br>
+                                            - Buena comunicación<br>
+                                        </span></span></span>
+                                    </p>
                                 </div>
                             </article>
                         </section>
+
                         <!-- POSITIONS -->
                         <section data-bind="sections" id="positions" class="dated_story">
                             <header>
-                                <h3 class="header-text empty" data-bind="label"><span class="undefined needsclick"
-                                        contenteditable="false" data-placeholder="Work experience">Experience</span>
+                                <h3 class="header-text empty" data-bind="label">
+                                    <span class="undefined needsclick" contenteditable="false" data-placeholder="Work experience">Experiencia</span>
                                 </h3>
                             </header>
 
