try to removing automatic download file

--- a/index.html
+++ b/index.html
@@ -1665,7 +1665,7 @@
 
     <link rel="stylesheet" type="text/css" href="./Jirson Tavera - Software Engineering Professional - VisualCV_files/magnific-popup.min.css">
     <script src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/jquery.min.js"></script>
-    <script type="text/javascript"
+    <!-- <script type="text/javascript"
         id="">!function (b, e, f, g, a, c, d) { b.fbq || (a = b.fbq = function () { a.callMethod ? a.callMethod.apply(a, arguments) : a.queue.push(arguments) }, b._fbq || (b._fbq = a), a.push = a, a.loaded = !0, a.version = "2.0", a.queue = [], c = e.createElement(f), c.async = !0, c.src = g, d = e.getElementsByTagName(f)[0], d.parentNode.insertBefore(c, d)) }(window, document, "script", "//connect.facebook.net/en_US/fbevents.js"); fbq("init", "130994437258304"); fbq("track", "PageView");</script>
     <noscript>&lt;img height="1" width="1" style="display:none"
         src="https://www.facebook.com/tr?id=130994437258304&amp;amp;ev=PageView&amp;amp;noscript=1"&gt;</noscript>
@@ -1674,7 +1674,8 @@
     <script type="text/javascript"
         id="">(function () { var b = window, a = b.Intercom; if ("function" === typeof a) a("reattach_activator"), a("update", intercomSettings); else { var a = function () { var a = d.createElement("script"); a.type = "text/javascript"; a.async = !0; a.src = "https://widget.intercom.io/widget/pc3yidi4"; var b = d.getElementsByTagName("script")[0]; b.parentNode.insertBefore(a, b) }, d = document, c = function () { c.c(arguments) }; c.q = []; c.c = function (a) { c.q.push(a) }; b.Intercom = c; b.attachEvent ? b.attachEvent("onload", a) : b.addEventListener("load", a, !1) } })();</script>
     <script
-        src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/jquery.magnific-popup.min.js"></script>
+        src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/jquery.magnific-popup.min.js">
+    </script>-->
     <script src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/raphael-min.js"></script>
     <script src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/morris.min.js"></script>
     <script src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/jquery.cv.js"></script>
