--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
     <!-- Open Graph data -->
     <meta property="og:image" content="https://www.visualcv.com/images/visualcv-resume-templates.jpg">
 
-    <link rel="stylesheet" type="text/css"
-        href="./Jirson Tavera - Software Engineering Professional - VisualCV_files/visualcv.css">
-    <script async=""
-        src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/hotjar-99258.js"></script>
-    <script async=""
-        src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/modules-bcb6f6382be530183b94c4d38f350a82.js"></script>
+    <link rel="stylesheet" type="text/css" href="./Jirson Tavera - Software Engineering Professional - VisualCV_files/visualcv.css">
+
+    <!-- <script async="" src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/hotjar-99258.js"></script>
+    <script async="" src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/modules-bcb6f6382be530183b94c4d38f350a82.js"></script>
+
     <style type="text/css">
         iframe#_hjRemoteVarsFrame {
             display: none !important;
@@ -69,10 +68,8 @@
             pointer-events: none !important;
         }
     </style>
-    <script async=""
-        src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/hotjar-99258(1).js"></script>
-    <script async=""
-        src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/modules-bcb6f6382be530183b94c4d38f350a82(1).js"></script>
+    <script async="" src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/hotjar-99258(1).js"></script>
+    <script async="" src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/modules-bcb6f6382be530183b94c4d38f350a82(1).js"></script> 
     <style type="text/css">
         iframe#_hjRemoteVarsFrame {
             display: none !important;
@@ -81,7 +78,7 @@
             opacity: 0 !important;
             pointer-events: none !important;
         }
-    </style>
+    </style> -->
 </head>
 
 <body data-cv-id="1319825" class="cv-viewer">
